syntax = "proto3";

package proto;

import "google/protobuf/duration.proto";

service NativeLoadBalancerAgent {
    rpc CreateServers(Data) returns (Result) {}
    rpc UpdateServers(Data) returns (Result) {}
    rpc DeleteServers(Data) returns (Result) {}
    rpc GetAgentStatus(Command) returns (AgentStatus) {}
    rpc GetServerStats(Command) returns (ServerStats) {}
}

message Data {
    repeated Server Servers = 1;
}

message Agent {
    string HostName = 1;
    string IPAddress = 2;
    int32 Port = 3;
    string ControlInterface = 4;
    string SyncInterface = 5;
    string DataInterface = 6;
    string Cluster = 7;
}

message AgentStatus {
    string Name = 1;
    int32 Pid = 2;
    string StartTime = 3;
    string Time = 4;
    google.protobuf.Duration Uptime = 5;
    string Version = 6;
}

message ServerStats {
    string Name = 1;
    int32 ActiveConnections = 2;
    int32 RxTotal = 3;
    int32 TxTotal = 4;
    int32 RxSecond  = 5;
    int32 TxSecond  = 6;
    repeated Backend Backends = 7;
}

message Server {
    string Bind = 1;
    string Protocol = 2;
    UDP UDP = 3;
    string Balance = 4;
    int32 MaxConnections = 5;
    string ClientIdleTimeout = 6;
    string BackendIdleTimeout = 7;
    string BackendConnectionTimeout = 8;
    Discovery Discovery = 9;
    HealthCheck HealthCheck = 10;
}

message Discovery {
    string Kind = 1;
    repeated BackendSpec BackendSpec = 2;
}

message HealthCheck {
    int32 Fails = 1;
    int32 Passes = 2;
    string Interval = 3;
    string Timeout = 4;
    string Kind = 5;
    string PingTimeoutDuration = 6;
}

message UDP {
    int32 MaxRequests = 1;
    int32 MaxResponses = 2;
}

message Backend {
    BackendSpec BackendSpec = 1;
    BackendStatus BackendStatus = 2;
}

message BackendSpec {
    string Host = 1;
    string Port = 2;
    int32 Priority = 3;
    int32 Weight = 4;
}

message  BackendStatus {
    bool Live = 1;
    int32 TotalConnections = 2;
    int32 ActiveConnections = 3;
    int32 RefusedConnections = 4;
    int32 Rx = 5;
    int32 Tx = 6;
    int32 RxSecond = 7;
    int32 TxSecond =8;
}

message Command {}
message Result {}